Fixed issue with unexpected sidebar width too big

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -51,8 +51,8 @@ html, body {
 }
 
 aside {
-    width: 200px;
-    flex: 0 0 content;
+    --width: 200px;
+    flex: 0 0 min-content;
     display:flex;
     flex-direction: column;
 }
